markdowns with explanation

--- a/Model .ipynb
+++ b/Model .ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models and visualisations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 319,
    "metadata": {},
@@ -43,6 +50,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Loading the training data**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -68,6 +82,13 @@
    "source": [
     "xtrain=np.array(xtrain)\n",
     "print xtrain.shape,ytrain.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A look at the training data**"
    ]
   },
   {
@@ -370,6 +391,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Train test split 1/3rd test set**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -396,6 +424,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**defining different models we'll try**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 242,
    "metadata": {},
@@ -409,6 +444,13 @@
     "xgmodel=XGBClassifier()\n",
     "#ensemble=VotingClassifier(estimators=[('gbm',model),('rf',model1),\n",
     "                                     # ('lr',model2),('knn',model3),('ada',model4),('xgb',xgmodel)],voting='hard')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Accuracies of different models,we can see the gradient boosting outperformed every model with 75.65% accuracy**"
    ]
   },
   {
@@ -479,6 +521,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualising feature importances,naturally number of wins are most important followed by strength of schedule."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 315,
    "metadata": {},
@@ -520,6 +569,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**persisting the model for later use**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 245,
    "metadata": {},
@@ -534,6 +590,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural Network\n",
+    "#### that's right,tried the neural network too using keras,built a simple 2 hidden layer MLP,accuracy obtained was less than GBM and took more time"
+   ]
   },
   {
    "cell_type": "code",
@@ -585,6 +649,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**cross-validation score**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
@@ -605,6 +676,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Accuracy**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
@@ -621,6 +699,14 @@
    "source": [
     "estimator.fit(x_train, y_train)\n",
     "print \"Accuracy: {}%\\n\".format(estimator.score(x_test, y_test) *100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Area under curve(auc)\n",
+    "**And visualisation of predicted and actual win percentages**"
    ]
   },
   {
@@ -679,6 +765,13 @@
     "plt.legend(handles=[line_patch, bar_patch], loc = 'upper left')\n",
     "plt.show(ax1)\n",
     "plt.show(ax2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Never Mind this ,just some hyperparameter tuning for our final model,the gradient boosting regressor"
    ]
   },
   {
