--- a/predict .ipynb
+++ b/predict .ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Just prediction for 2015 tournament\n",
+    "### most of the functions are same as pucho_data_vis.ipynb\n",
+    "**feel free to skip to the bottom part where I have generated a csv with predictions for all possible matches in 2015 tourney in the format of the sample submission provided by kaggle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1242,6 +1251,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Here!!\n",
+    "### looking at the sample submission"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1321,6 +1338,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to generate our prediction table using our model and saving it as csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1349,6 +1373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Took 1 hour runtime**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -1360,20 +1391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0], [0, 0]]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
