--- a/pucho_data_vis .ipynb
+++ b/pucho_data_vis .ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data exploration,feature extraction and training data generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* importing the libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +31,13 @@
     "import collections\n",
     "import cPickle as cp\n",
     "#import string as str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Regular season compact result is a csv with records of all regualar season matches from 1985-2014.Regular season is kind of like the league matches from what I read.compact as it has only important info such as season,winning team,losing team,scores etc"
    ]
   },
   {
@@ -303,9 +324,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### this is regular season detailed data,it contains everything,winning team,points scored,goals scored,3 pointers,location,blocks,basically complete statistics.\n",
+    "#### unfortunately this detailed table is only available for after 2003.Hence it limited my training data size as features based on these stats could only be found for years 2003 onwards\n",
+    ">I tried downloading these additional stats for previous years from https://www.sports-reference.com/cbb/seasons/1975.html ,but the names of teams were very differently formatted from the kaggle data,so a lot of time consuming data cleaning would have been required,decided to go ahead and evaluate with the smaller data first before trying that,got satisfactory results with stilla big enough dataset anyway,so didn't bother"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -506,6 +538,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### this is like the compact results above but for main tournaments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
@@ -523,6 +562,13 @@
     "tourc.head()\n",
     "champlist=tourc[tourc['daynum']==154]['wteam'].tolist()\n",
     "print champlist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### This is like detailed results above but for tournamenst"
    ]
   },
   {
@@ -729,6 +775,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "seeds of teams in tournament"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -811,6 +864,13 @@
    "source": [
     "seed=pd.read_csv('/home/nishant/Downloads/Data/tourney_seeds.csv')\n",
     "seed.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "seeds of teams in 2015 tournament"
    ]
   },
   {
@@ -1081,6 +1141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### list of teams names and thier ids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 475,
    "metadata": {},
@@ -1169,6 +1236,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions below are basically features we shall use to define a team based on stats and other data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**function to get team id from name**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -1176,6 +1257,13 @@
    "source": [
     "def getTeamID(name):\n",
     "    return teams[teams['team_name'] == name].values[0][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**function to get total wins in the regular seasons by a team from 1985 to this year**"
    ]
   },
   {
@@ -1189,6 +1277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**fn to get team name from id**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {},
@@ -1199,13 +1294,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 230,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**function to get total wins in the tournaments by a team from 1985 to this year**"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "def totalwinst(team_id,year):\n",
     "    return len(tourc[(tourc['wteam']==team_id) & (tourc['season']<year)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**function to obtain seed of a team in the tourney in a given year,seed is an important feature.used _regular expressions for the same_.If unseeded then assign 25(random) seed can be from 1 to 16 as there are 4 zones with 16 teams in tournament**"
    ]
   },
   {
@@ -1224,6 +1331,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**fn to find total number of tournaments ever won by a given team **"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {},
@@ -1231,6 +1345,13 @@
    "source": [
     "def totaltrophies(team_id):\n",
     "    return champlist.count(team_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**function to determine current form.THis is average winning percent of a team in its last 6 regular season and last 6 tournament games**"
    ]
   },
   {
@@ -1248,6 +1369,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**function to find total tournament appearances by a team in history**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 296,
    "metadata": {},
@@ -1258,6 +1386,15 @@
     "    for year in range(1985,2014):\n",
     "        count+=team_id in np.concatenate([np.asarray(tourc[tourc['season']==year]['wteam'].values),np.asarray(tourc[tourc['season']==year]['lteam'].values)])\n",
     "    return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strength of schedule is basically a sports stat that quantifies how favourable was the schedule for a team.\n",
+    "**I wrote a function to determine sos of a team in a given year based on the quality(win %) of its opponents and the quality of its opponents' opponents** the function returned accurate results compared to actual stat observed on espn site.\n",
+    "reference http://www.nationalchamps.net/NCAA/BCS/strength_of_schedule_explain.htm#opponents"
    ]
   },
   {
@@ -1317,6 +1454,38 @@
     "    #SOS=(2*oppr[0]+OOR)/3\n",
     "    return SOS\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FUNCTION THAT RETURNS A LIST OF ALL FEATURES WE SHALL BE USING FOR THE TEAMS.THEY ARE\n",
+    "* games won that year\n",
+    "* seed that year\n",
+    "* regular wins in the history of the team since 1985\n",
+    "* tournament match wins in the history since 1985\n",
+    "* average points scored that year\n",
+    "* recent form(form function above)\n",
+    "* trophies won in history\n",
+    "* appearances in tournament\n",
+    "* average field goals scored in a season\n",
+    "* avg no of turnovers in a season\n",
+    "* avg 3 pointers\n",
+    "* avg rebounds \n",
+    "* avg steals\n",
+    "* avg assists\n",
+    "* avg assists\n",
+    "* avg points scored\n",
+    "* avg points conceded\n",
+    "* avg sos (see sos function above\n"
    ]
   },
   {
@@ -1381,6 +1550,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "function that returns element wise difference between features of two teams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 318,
    "metadata": {},
@@ -1391,6 +1567,13 @@
     "    team_2 = seasonstat(id_2, year)\n",
     "    diff = [a - b for a, b in zip(team_1, team_2)]\n",
     "    return diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** fn that quantifies location of match,+1 if home for winning team,-1 if away and 0 if neutral **"
    ]
   },
   {
@@ -1420,6 +1603,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creates a dictionary with feature vectors of all teams in a year with year as key**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 462,
    "metadata": {},
@@ -1431,6 +1621,20 @@
     "        team_vector = seasonstat(team, year)\n",
     "        seadict[team] = team_vector\n",
     "    return seadict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating training data\n",
+    "* **most important function,generates training data.training data is nothing but match feature vectors for all matches from 2003-2014 as detailed stats before 2003 not available**\n",
+    "\n",
+    "* **approx >55000 samples**\n",
+    "\n",
+    "* **match featuire vector(X) is nothing but the difference of feature vectors of teams involved ina match with location info appended,hence vector length of 17**\n",
+    "\n",
+    "* **sample label(Y) is 1 if team1 wins,now the data is so given,that it will be always be one,so to introduce negative samples,feature vectors of alternate matches(X) was sign inverted and (Y) made 0**"
    ]
   },
   {
@@ -1507,6 +1711,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creating and pickling dataset, this ran for 2.5 hrs**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 517,
    "metadata": {},
@@ -1517,6 +1728,13 @@
     "trainingdata=[x_train,y_train]\n",
     "with open('/home/nishant/Desktop/train.p', 'wb') as outfile:  \n",
     "    cp.dump(trainingdata, outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**persisting the season dictionary for using in apiu endpoint to predict match result**"
    ]
   },
   {
